styles/style.css
body {
	--max-width: 1440px;
	--padding: var(--size-400);
	width: min(var(--max-width), 100% - (var(--padding) * 2));
	margin-inline: auto;
	background-color: var(--clr-light-blue-200);
	font-size: var(--fs-body);
	font-family: var(--ff-body);
	color: var(--clr-gray-500);
	line-height: var(--lh-400);
}

.container {
	--max-width: 1160px;
	width: min(var(--max-width), 100%);
	margin-inline: auto;
	margin-bottom: calc(var(--size-600) + var(--size-200));
	display: grid;
	gap: var(--size-800);
}

.cipher-action {
	width: 100%;
	margin-inline: auto;
}

.text-input {
	margin-bottom: var(--size-400);
}

.text-input textarea {
	width: 100%;
	height: 18.6875rem;
	margin-top: calc(var(--size-700) + var(--size-200));
	font-size: var(--fs-primary-heading);
	color: var(--clr-dark-blue-300);
	font-weight: var(--fw-bold);
	line-height: var(--lh-600);
	border: none;
	resize: none;
	background-color: transparent;
}

.text-input textarea:focus,
.text-input textarea:focus-visible {
	outline: none;
}

.text-input textarea::placeholder {
	color: var(--clr-dark-blue-300);
	opacity: 1;
}

.input-info {
	font-size: var(--fs-300);
	text-align: left;
}

.input-info img {
	display: inline;
	vertical-align: middle;
	margin-right: var(--size-200);
}

.buttons {
	display: grid;
	gap: var(--size-500);
}

.text-output {
	margin: var(--size-600) 0 0 0;
	text-align: center;
	border: 1px solid black;
	border-radius: var(--size-600);
	box-shadow: 0px 24px 32px rgba(0, 0, 0, 0.08);
}

.toggle-img {
	display: none;
	margin-bottom: var(--size-500);

}

.button {
	background-color: var(--clr-dark-blue-300);
	color: var(--clr-white);
	border-radius: var(--size-500);
	padding-block: var(--size-500);
	border: 1px solid var(--clr-dark-blue-300);
}

.button[data-type="inverted"] {
	color: var(--clr-dark-blue-300);
	background-color: var(--clr-white);
}

/* @media screen and (min-width: 50em) { */
@media screen and (min-width: 90em) {
	.container {
		grid-auto-flow: column;
		grid-auto-columns: 66.6% 33.3%;
	}

	.buttons {
		grid-auto-flow: column;
		grid-auto-columns: 1fr;

	}

	.toggle-img {
		display: block;
	}

	.text-output{
		max-height: 100vh;
		padding-block: 25%;
		position: relative;
		top: -var(--size-900);
	}
}

